cmake_minimum_required(VERSION 2.8.11)
project(链表)

# 子目录
#add_subdirectory(206.反转链表)
#add_subdirectory(143.重排链表)
#add_subdirectory(141.环形链表)
#add_subdirectory(92.反转链表II)
#add_subdirectory(142.环形链表II)
#add_subdirectory(24.两两交换链表中的节点)
#add_subdirectory(25.K个一组翻转链表)
#add_subdirectory(328.奇偶链表)
#add_subdirectory(83.删除排序链表中的重复元素)
add_subdirectory(82.删除排序链表中的重复元素II)